--- a/src/assets/style-guide/config/_fonts.scss
+++ b/src/assets/style-guide/config/_fonts.scss
@@ -4,7 +4,7 @@
 $font-normal: normal;
 $font-bold: bold;
 
-$font-family:  'Open Sans', sans-serif;
+$font-open-sans:  'Open Sans', sans-serif;
 
 //size
 $font-size-title: rem(16px);
