--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,4 +5,4 @@
     margin: 0;
     box-sizing: border-box;
   }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: $font-open-sans; }
